# validated-table-extractor

./: .env.example  .gitignore  CONTRIBUTING.md  QUICK_START_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.sh  test_extraction.py
examples/: quick_start.py
src/: __init__.py  batch.py  config.py  extractor.py  models.py
tests/: test_extractor.py
